[metadata]
name = nessusfile
version = 0.0.1
author = Shaun Wheelhouse
author_email = shaun@hauntedsand.net
description = Classes for parsing Nessus scan files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/bitblight/nessusfile
project_urls =
    Bug Tracker = https://gitlab.com/bitblight/nessusfile/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    lxml

[options.packages.find]
where = src
